RESOLVED FIXED283275
Playback doesn't always resume after a seek
https://bugs.webkit.org/show_bug.cgi?id=283275
Summary Playback doesn't always resume after a seek
Jean-Yves Avenard [:jya]
Reported 2024-11-17 19:54:36 PST
When playing both a video through MediaSource or a WebM, when you quickly seek back and forth in the video which is currently playing. About 1 in 3 times playback will not resume. STR: - Start playing a MSE video or a WeBM video such as https://jyavenard.github.io/htmltests/mediatest/webm/Morocco_1080p30.webm - Seek sometimes in the future. - If video resumes, seek sometimes in the past Repeat until after seeking playback stays pause. It usually never takes more than 5 goes. This happens because we seek to a MediaTime which is a backed by a double and we wait for the time synchroniser to complete its own seek. The synchroniser uses a rational number. In the log sometimes I could see: MediaPlayerPrivateWebM::operator()(E1CBD29A9CAC648C) seekedTime = {"value":201.04438000000002}, synchronizerTime = {"value":201.04438,"numerator":2010443800,"denominator":10000000,"flags":1}synchronizer seeking = true So even though we have synchronizerTime almost equal to seekedTime, the float rounding errors causes the test to determine if we've completed the seek to fail `m_isSynchronizerSeeking = synchronizerTime != seekedTime;` [1] The same occurs playing this video over MSE [2] [1] https://searchfox.org/wubkat/rev/d45649fa32a499702c30474e94bd6843c4c67849/Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm#437https://searchfox.org/wubkat/rev/d45649fa32a499702c30474e94bd6843c4c67849/Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm#437 [2] https://searchfox.org/wubkat/rev/d45649fa32a499702c30474e94bd6843c4c67849/Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm#562
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-17 19:54:54 PST
Jean-Yves Avenard [:jya]
Comment 2 2024-11-17 20:04:13 PST
Committed 286685@main (20984f6): https://commits.webkit.org/286685@main Reviewed commits have been landed. Closing PR #36676 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3 2024-11-17 20:05:02 PST
modified the wrong bug
Jean-Yves Avenard [:jya]
Comment 4 2024-11-17 20:17:58 PST
EWS
Comment 5 2024-11-22 06:54:34 PST
Committed 286956@main (4a58bf5dbacc): <https://commits.webkit.org/286956@main> Reviewed commits have been landed. Closing PR #36782 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.