Playback doesn't always resume after a seek https://bugs.webkit.org/show_bug.cgi?id=283275 rdar://140097993

Reviewed by Youenn Fablet.

Exact comparison between MediaTime's double and MediaTime's rational can fail due to precision loss.
As a workaround, we instead check that the difference between the two is less than 1ms.

Manually tested: In our tests, WebKitTestRunner runs without a visible window, and so the issue which is highly
timing dependent can't be consistently reproduced.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::seekInternal):
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::seekInternal):

Canonical link: https://commits.webkit.org/286956@main